asgn3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_unless
    BLOCK_END
    KEYWORD___ENCODING__
    BITANDEQUAL
    SQUOTES
    KEYWORD_END
    KEYWORD_self
    KEYWORD_when
    MINUSEQUAL
    KEYWORD_nil
    OR
    SIGIL_AT
    DIVEQUAL
    KEYWORD_or
    LOGICALANDEQUAL
    KEYWORD_retry
    KEYWORD_undef
    SIGIL_DOLLAR
    DOUBLE_COLON
    DOUBLESTAREQUAL
    KEYWORD_false
    KEYWORD_definedQ
    SHIFTLEQUAL
    AND
    NOT
    KEYWORD_not
    KEYWORD_yield
    DOT
    KEYWORD_ensure
    MODEQUAL
    QUESTIONCOLON
    KEYWORD_true
    LOGICALOREQUAL
    KEYWORD___END__
    PLUSEQUAL
    KEYWORD_super
    KEYWORD_alias
    MULTIPLYEQUAL
    SHIFTREQUAL
    KEYWORD___LINE__
    KEYWORD_BEGIN
    BLOCK_BEGIN
    KEYWORD_class
    DQUOTES
    PIPEEQUAL
    KEYWORD_and
    KEYWORD___FILE__
    SIGIL_DOUBLE_AT
    KEYWORD_rescue
    KEYWORD_module
    DOLLAR
    BACK_SLASH
    KEYWORD_case
    BITXOREQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> top_top_compstmt
Rule 2     top_top_compstmt -> statements opt_terms
Rule 3     statements -> statement
Rule 4     statements -> statements terms statement
Rule 5     statements -> none
Rule 6     statement -> top_compstmt
Rule 7     statement -> func_defn
Rule 8     func_defn -> KEYWORD_def fname opt_oparen arguments opt_cparen func_stmts opt_terms KEYWORD_end
Rule 9     fname -> VARIABLES
Rule 10    fname -> CONSTANTS
Rule 11    arguments -> arguments COMMA VARIABLES
Rule 12    arguments -> arguments COMMA CONSTANTS
Rule 13    arguments -> arguments COMMA func_arg_expr
Rule 14    arguments -> VARIABLES
Rule 15    arguments -> CONSTANTS
Rule 16    arguments -> func_arg_expr
Rule 17    func_arg_expr -> VARIABLES EQUAL primary
Rule 18    func_arg_expr -> CONSTANTS EQUAL primary
Rule 19    top_compstmt -> top_stmts
Rule 20    top_stmts -> top_stmt
Rule 21    top_stmt -> stmt
Rule 22    top_stmt -> KEYWORD_if expr3 opt_then gen_stmts opt_terms elsif_tail opt_else_stmt KEYWORD_end
Rule 23    top_stmt -> KEYWORD_while expr3 opt_do gen_stmts opt_terms KEYWORD_end
Rule 24    top_stmt -> top_stmt KEYWORD_while expr3
Rule 25    top_stmt -> KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_while expr3
Rule 26    top_stmt -> top_stmt KEYWORD_until expr3
Rule 27    top_stmt -> KEYWORD_until expr3 opt_do gen_stmts opt_terms KEYWORD_end
Rule 28    top_stmt -> KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_until expr3
Rule 29    top_stmt -> KEYWORD_for opt_oparen multi_var opt_cparen KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
Rule 30    gen_stmts -> top_stmt
Rule 31    gen_stmts -> gen_stmts terms top_stmt
Rule 32    gen_stmts -> none
Rule 33    stmt -> expr
Rule 34    stmt -> expr1
Rule 35    stmt -> puts_stmt
Rule 36    stmt -> loop_stmt
Rule 37    stmt -> exit_stmt
Rule 38    stmt -> func_call_stmt
Rule 39    func_call_stmt -> fname opt_oparen func_ret_arg opt_cparen
Rule 40    func_call_stmt -> MLHS EQUAL fname opt_oparen func_ret_arg opt_cparen
Rule 41    loop_stmt -> KEYWORD_break
Rule 42    loop_stmt -> KEYWORD_next
Rule 43    loop_stmt -> KEYWORD_redo
Rule 44    exit_stmt -> KEYWORD_exit
Rule 45    puts_stmt -> KEYWORD_puts mrhs
Rule 46    puts_stmt -> KEYWORD_puts expr
Rule 47    func_stmts -> func_stmt
Rule 48    func_stmts -> func_stmts terms func_stmt
Rule 49    func_stmts -> none
Rule 50    func_stmt -> top_stmt
Rule 51    func_stmt -> KEYWORD_return func_ret_arg
Rule 52    func_ret_arg -> func_arg_expr
Rule 53    func_ret_arg -> primary
Rule 54    func_ret_arg -> func_ret_arg COMMA func_arg_expr
Rule 55    func_ret_arg -> func_ret_arg COMMA primary
Rule 56    opt_else_stmt -> KEYWORD_else gen_stmts
Rule 57    opt_else_stmt -> none
Rule 58    elsif_tail -> none
Rule 59    elsif_tail -> KEYWORD_elsif expr3 opt_then gen_stmts elsif_tail
Rule 60    opt_then -> KEYWORD_then
Rule 61    opt_then -> newline
Rule 62    opt_do -> KEYWORD_do
Rule 63    opt_do -> newline
Rule 64    multi_var -> VARIABLES
Rule 65    multi_var -> CONSTANTS
Rule 66    multi_var -> array
Rule 67    multi_var -> multi_var COMMA VARIABLES
Rule 68    multi_var -> multi_var COMMA CONSTANTS
Rule 69    opt_oparen -> OPEN_PAREN
Rule 70    opt_oparen -> none
Rule 71    opt_cparen -> CLOSE_PAREN
Rule 72    opt_cparen -> none
Rule 73    for_range -> INT_CONSTANTS DOUBLEDOT INT_CONSTANTS
Rule 74    for_range -> INT_CONSTANTS TRIPLEDOT INT_CONSTANTS
Rule 75    for_range -> VARIABLES
Rule 76    for_range -> array
Rule 77    for_range -> CONSTANTS
Rule 78    expr -> MLHS EQUAL MRHS
Rule 79    MLHS -> mlhs
Rule 80    MLHS -> MLHS COMMA mlhs
Rule 81    MRHS -> mrhs
Rule 82    MRHS -> MRHS COMMA mrhs
Rule 83    mlhs -> VARIABLES
Rule 84    mlhs -> CONSTANTS
Rule 85    mlhs -> array
Rule 86    mrhs -> expr1
Rule 87    mrhs -> str_expr
Rule 88    mrhs -> KEYWORD_gets
Rule 89    mrhs -> OPEN_BRACKET func_ret_arg CLOSE_BRACKET
Rule 90    str_expr -> str_expr PLUS STRING_CONSTANTS
Rule 91    str_expr -> STRING_CONSTANTS
Rule 92    primary -> INT_CONSTANTS
Rule 93    primary -> FLOAT_CONSTANTS
Rule 94    primary -> STRING_CONSTANTS
Rule 95    primary -> CHAR_CONSTANTS
Rule 96    primary -> BOOLEAN_CONSTANTS
Rule 97    primary -> CONSTANTS
Rule 98    primary -> VARIABLES
Rule 99    primary -> array
Rule 100   expr1 -> expr3 QUESTION_MARK expr2 COLON expr2
Rule 101   expr1 -> expr2
Rule 102   expr2 -> expr7 DOUBLEDOT expr7
Rule 103   expr2 -> expr7 TRIPLEDOT expr7
Rule 104   expr2 -> expr3
Rule 105   expr3 -> expr3 LOGICALOR expr4
Rule 106   expr3 -> expr4
Rule 107   expr4 -> expr4 LOGICALAND expr5
Rule 108   expr4 -> expr5
Rule 109   expr5 -> expr6 IFF expr6
Rule 110   expr5 -> expr6 DOUBLEEQUAL expr6
Rule 111   expr5 -> expr6 TRIPLEEQUAL expr6
Rule 112   expr5 -> expr6 NOTEQUAL expr6
Rule 113   expr5 -> expr6
Rule 114   expr6 -> expr7 LESSEQUAL expr7
Rule 115   expr6 -> expr7 LESS expr7
Rule 116   expr6 -> expr7 GREATER expr7
Rule 117   expr6 -> expr7 GREATEREQUAL expr7
Rule 118   expr6 -> expr7
Rule 119   expr6 -> BOOLEAN_CONSTANTS
Rule 120   expr7 -> expr7 BITXOR expr8
Rule 121   expr7 -> expr7 PIPE expr8
Rule 122   expr7 -> expr8
Rule 123   expr8 -> expr8 BITAND expr9
Rule 124   expr8 -> expr9
Rule 125   expr9 -> expr9 SHIFTL expr10
Rule 126   expr9 -> expr9 SHIFTR expr10
Rule 127   expr9 -> expr10
Rule 128   expr10 -> expr10 PLUS expr11
Rule 129   expr10 -> expr10 MINUS expr11
Rule 130   expr10 -> expr11
Rule 131   expr11 -> expr11 MULTIPLY expr12
Rule 132   expr11 -> expr11 DIV expr12
Rule 133   expr11 -> expr11 MOD expr12
Rule 134   expr11 -> expr12
Rule 135   expr12 -> expr13 DOUBLESTAR expr12
Rule 136   expr12 -> expr13
Rule 137   expr13 -> OPEN_PAREN expr1 CLOSE_PAREN
Rule 138   expr13 -> uexpr INT_CONSTANTS
Rule 139   expr13 -> uexpr FLOAT_CONSTANTS
Rule 140   expr13 -> CONSTANTS
Rule 141   expr13 -> VARIABLES
Rule 142   expr13 -> array
Rule 143   array -> VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
Rule 144   array -> VARIABLES OPEN_BRACKET expr7 DOUBLEDOT expr7 CLOSE_BRACKET
Rule 145   array -> VARIABLES OPEN_BRACKET expr7 TRIPLEDOT expr7 CLOSE_BRACKET
Rule 146   uexpr -> none
Rule 147   uexpr -> PLUS
Rule 148   uexpr -> MINUS
Rule 149   uexpr -> BITNOT
Rule 150   uexpr -> BITCOMP
Rule 151   opt_terms -> none
Rule 152   opt_terms -> terms
Rule 153   terms -> term
Rule 154   terms -> terms term
Rule 155   term -> DELIM
Rule 156   term -> newline
Rule 157   none -> <empty>

Terminals, with rules where they appear

AND                  : 
BACK_SLASH           : 
BITAND               : 123
BITANDEQUAL          : 
BITCOMP              : 150
BITNOT               : 149
BITXOR               : 120
BITXOREQUAL          : 
BLOCK_BEGIN          : 
BLOCK_END            : 
BOOLEAN_CONSTANTS    : 96 119
CHAR_CONSTANTS       : 95
CLOSE_BRACKET        : 89 143 144 145
CLOSE_PAREN          : 71 137
COLON                : 100
COMMA                : 11 12 13 54 55 67 68 80 82
CONSTANTS            : 10 12 15 18 65 68 77 84 97 140
DELIM                : 155
DIV                  : 132
DIVEQUAL             : 
DOLLAR               : 
DOT                  : 
DOUBLEDOT            : 73 102 144
DOUBLEEQUAL          : 110
DOUBLESTAR           : 135
DOUBLESTAREQUAL      : 
DOUBLE_COLON         : 
DQUOTES              : 
EQUAL                : 17 18 40 78
FLOAT_CONSTANTS      : 93 139
GREATER              : 116
GREATEREQUAL         : 117
IFF                  : 109
INT_CONSTANTS        : 73 73 74 74 92 138
KEYWORD_BEGIN        : 
KEYWORD_END          : 
KEYWORD___ENCODING__ : 
KEYWORD___END__      : 
KEYWORD___FILE__     : 
KEYWORD___LINE__     : 
KEYWORD_alias        : 
KEYWORD_and          : 
KEYWORD_begin        : 25 28
KEYWORD_break        : 41
KEYWORD_case         : 
KEYWORD_class        : 
KEYWORD_def          : 8
KEYWORD_definedQ     : 
KEYWORD_do           : 62
KEYWORD_else         : 56
KEYWORD_elsif        : 59
KEYWORD_end          : 8 22 23 25 27 28 29
KEYWORD_ensure       : 
KEYWORD_exit         : 44
KEYWORD_false        : 
KEYWORD_for          : 29
KEYWORD_gets         : 88
KEYWORD_if           : 22
KEYWORD_in           : 29
KEYWORD_module       : 
KEYWORD_next         : 42
KEYWORD_nil          : 
KEYWORD_not          : 
KEYWORD_or           : 
KEYWORD_puts         : 45 46
KEYWORD_redo         : 43
KEYWORD_rescue       : 
KEYWORD_retry        : 
KEYWORD_return       : 51
KEYWORD_self         : 
KEYWORD_super        : 
KEYWORD_then         : 60
KEYWORD_true         : 
KEYWORD_undef        : 
KEYWORD_unless       : 
KEYWORD_until        : 26 27 28
KEYWORD_when         : 
KEYWORD_while        : 23 24 25
KEYWORD_yield        : 
LESS                 : 115
LESSEQUAL            : 114
LOGICALAND           : 107
LOGICALANDEQUAL      : 
LOGICALOR            : 105
LOGICALOREQUAL       : 
MINUS                : 129 148
MINUSEQUAL           : 
MOD                  : 133
MODEQUAL             : 
MULTIPLY             : 131
MULTIPLYEQUAL        : 
NOT                  : 
NOTEQUAL             : 112
OPEN_BRACKET         : 89 143 144 145
OPEN_PAREN           : 69 137
OR                   : 
PIPE                 : 121
PIPEEQUAL            : 
PLUS                 : 90 128 147
PLUSEQUAL            : 
QUESTIONCOLON        : 
QUESTION_MARK        : 100
SHIFTL               : 125
SHIFTLEQUAL          : 
SHIFTR               : 126
SHIFTREQUAL          : 
SIGIL_AT             : 
SIGIL_DOLLAR         : 
SIGIL_DOUBLE_AT      : 
SQUOTES              : 
STRING_CONSTANTS     : 90 91 94
TRIPLEDOT            : 74 103 145
TRIPLEEQUAL          : 111
VARIABLES            : 9 11 14 17 64 67 75 83 98 141 143 144 145
error                : 
newline              : 61 63 156

Nonterminals, with rules where they appear

MLHS                 : 40 78 80
MRHS                 : 78 82
arguments            : 8 11 12 13
array                : 66 76 85 99 142
elsif_tail           : 22 59
exit_stmt            : 37
expr                 : 33 46
expr1                : 34 86 137
expr10               : 125 126 127 128 129
expr11               : 128 129 130 131 132 133
expr12               : 131 132 133 134 135
expr13               : 135 136
expr2                : 100 100 101
expr3                : 22 23 24 25 26 27 28 59 100 104 105
expr4                : 105 106 107
expr5                : 107 108
expr6                : 109 109 110 110 111 111 112 112 113
expr7                : 102 102 103 103 114 114 115 115 116 116 117 117 118 120 121 143 144 144 145 145
expr8                : 120 121 122 123
expr9                : 123 124 125 126
fname                : 8 39 40
for_range            : 29
func_arg_expr        : 13 16 52 54
func_call_stmt       : 38
func_defn            : 7
func_ret_arg         : 39 40 51 54 55 89
func_stmt            : 47 48
func_stmts           : 8 48
gen_stmts            : 22 23 25 27 28 29 31 56 59
loop_stmt            : 36
mlhs                 : 79 80
mrhs                 : 45 81 82
multi_var            : 29 67 68
none                 : 5 32 49 57 58 70 72 146 151
opt_cparen           : 8 29 39 40
opt_do               : 23 27 29
opt_else_stmt        : 22
opt_oparen           : 8 29 39 40
opt_terms            : 2 8 22 23 25 27 28 29
opt_then             : 22 59
primary              : 17 18 53 55
program              : 0
puts_stmt            : 35
statement            : 3 4
statements           : 2 4
stmt                 : 21
str_expr             : 87 90
term                 : 153 154
terms                : 4 31 48 152 154
top_compstmt         : 6
top_stmt             : 20 24 26 30 31 50
top_stmts            : 19
top_top_compstmt     : 1
uexpr                : 138 139

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_top_compstmt
    (2) top_top_compstmt -> . statements opt_terms
    (3) statements -> . statement
    (4) statements -> . statements terms statement
    (5) statements -> . none
    (6) statement -> . top_compstmt
    (7) statement -> . func_defn
    (157) none -> .
    (19) top_compstmt -> . top_stmts
    (8) func_defn -> . KEYWORD_def fname opt_oparen arguments opt_cparen func_stmts opt_terms KEYWORD_end
    (20) top_stmts -> . top_stmt
    (21) top_stmt -> . stmt
    (22) top_stmt -> . KEYWORD_if expr3 opt_then gen_stmts opt_terms elsif_tail opt_else_stmt KEYWORD_end
    (23) top_stmt -> . KEYWORD_while expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (24) top_stmt -> . top_stmt KEYWORD_while expr3
    (25) top_stmt -> . KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_while expr3
    (26) top_stmt -> . top_stmt KEYWORD_until expr3
    (27) top_stmt -> . KEYWORD_until expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (28) top_stmt -> . KEYWORD_begin gen_stmts opt_terms KEYWORD_end KEYWORD_until expr3
    (29) top_stmt -> . KEYWORD_for opt_oparen multi_var opt_cparen KEYWORD_in for_range opt_do gen_stmts opt_terms KEYWORD_end
    (33) stmt -> . expr
    (34) stmt -> . expr1
    (35) stmt -> . puts_stmt
    (36) stmt -> . loop_stmt
    (37) stmt -> . exit_stmt
    (38) stmt -> . func_call_stmt
    (78) expr -> . MLHS EQUAL MRHS
    (100) expr1 -> . expr3 QUESTION_MARK expr2 COLON expr2
    (101) expr1 -> . expr2
    (45) puts_stmt -> . KEYWORD_puts mrhs
    (46) puts_stmt -> . KEYWORD_puts expr
    (41) loop_stmt -> . KEYWORD_break
    (42) loop_stmt -> . KEYWORD_next
    (43) loop_stmt -> . KEYWORD_redo
    (44) exit_stmt -> . KEYWORD_exit
    (39) func_call_stmt -> . fname opt_oparen func_ret_arg opt_cparen
    (40) func_call_stmt -> . MLHS EQUAL fname opt_oparen func_ret_arg opt_cparen
    (79) MLHS -> . mlhs
    (80) MLHS -> . MLHS COMMA mlhs
    (105) expr3 -> . expr3 LOGICALOR expr4
    (106) expr3 -> . expr4
    (102) expr2 -> . expr7 DOUBLEDOT expr7
    (103) expr2 -> . expr7 TRIPLEDOT expr7
    (104) expr2 -> . expr3
    (9) fname -> . VARIABLES
    (10) fname -> . CONSTANTS
    (83) mlhs -> . VARIABLES
    (84) mlhs -> . CONSTANTS
    (85) mlhs -> . array
    (107) expr4 -> . expr4 LOGICALAND expr5
    (108) expr4 -> . expr5
    (120) expr7 -> . expr7 BITXOR expr8
    (121) expr7 -> . expr7 PIPE expr8
    (122) expr7 -> . expr8
    (143) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (144) array -> . VARIABLES OPEN_BRACKET expr7 DOUBLEDOT expr7 CLOSE_BRACKET
    (145) array -> . VARIABLES OPEN_BRACKET expr7 TRIPLEDOT expr7 CLOSE_BRACKET
    (109) expr5 -> . expr6 IFF expr6
    (110) expr5 -> . expr6 DOUBLEEQUAL expr6
    (111) expr5 -> . expr6 TRIPLEEQUAL expr6
    (112) expr5 -> . expr6 NOTEQUAL expr6
    (113) expr5 -> . expr6
    (123) expr8 -> . expr8 BITAND expr9
    (124) expr8 -> . expr9
    (114) expr6 -> . expr7 LESSEQUAL expr7
    (115) expr6 -> . expr7 LESS expr7
    (116) expr6 -> . expr7 GREATER expr7
    (117) expr6 -> . expr7 GREATEREQUAL expr7
    (118) expr6 -> . expr7
    (119) expr6 -> . BOOLEAN_CONSTANTS
    (125) expr9 -> . expr9 SHIFTL expr10
    (126) expr9 -> . expr9 SHIFTR expr10
    (127) expr9 -> . expr10
    (128) expr10 -> . expr10 PLUS expr11
    (129) expr10 -> . expr10 MINUS expr11
    (130) expr10 -> . expr11
    (131) expr11 -> . expr11 MULTIPLY expr12
    (132) expr11 -> . expr11 DIV expr12
    (133) expr11 -> . expr11 MOD expr12
    (134) expr11 -> . expr12
    (135) expr12 -> . expr13 DOUBLESTAR expr12
    (136) expr12 -> . expr13
    (137) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (138) expr13 -> . uexpr INT_CONSTANTS
    (139) expr13 -> . uexpr FLOAT_CONSTANTS
    (140) expr13 -> . CONSTANTS
    (141) expr13 -> . VARIABLES
    (142) expr13 -> . array
    (146) uexpr -> . none
    (147) uexpr -> . PLUS
    (148) uexpr -> . MINUS
    (149) uexpr -> . BITNOT
    (150) uexpr -> . BITCOMP

    DELIM           reduce using rule 157 (none -> .)
    newline         reduce using rule 157 (none -> .)
    $end            reduce using rule 157 (none -> .)
    INT_CONSTANTS   reduce using rule 157 (none -> .)
    FLOAT_CONSTANTS reduce using rule 157 (none -> .)
    KEYWORD_def     shift and go to state 21
    KEYWORD_if      shift and go to state 27
    KEYWORD_while   shift and go to state 4
    KEYWORD_begin   shift and go to state 37
    KEYWORD_until   shift and go to state 25
    KEYWORD_for     shift and go to state 52
    KEYWORD_puts    shift and go to state 33
    KEYWORD_break   shift and go to state 47
    KEYWORD_next    shift and go to state 30
    KEYWORD_redo    shift and go to state 1
    KEYWORD_exit    shift and go to state 23
    VARIABLES       shift and go to state 28
    CONSTANTS       shift and go to state 22
    BOOLEAN_CONSTANTS shift and go to state 12
    OPEN_PAREN      shift and go to state 5
    PLUS            shift and go to state 7
    MINUS           shift and go to state 3
    BITNOT          shift and go to state 38
    BITCOMP         shift and go to state 29

    statements                     shift and go to state 24
    mlhs                           shift and go to state 2
    func_defn                      shift and go to state 36
    puts_stmt                      shift and go to state 19
    expr11                         shift and go to state 15
    expr12                         shift and go to state 16
    expr13                         shift and go to state 17
    top_stmts                      shift and go to state 18
    array                          shift and go to state 26
    expr2                          shift and go to state 39
    expr3                          shift and go to state 40
    program                        shift and go to state 6
    expr6                          shift and go to state 42
    fname                          shift and go to state 43
    expr5                          shift and go to state 44
    func_call_stmt                 shift and go to state 32
    expr8                          shift and go to state 45
    expr9                          shift and go to state 46
    expr4                          shift and go to state 10
    statement                      shift and go to state 31
    exit_stmt                      shift and go to state 48
    top_compstmt                   shift and go to state 49
    MLHS                           shift and go to state 50
    stmt                           shift and go to state 20
    expr7                          shift and go to state 8
    loop_stmt                      shift and go to state 9
    uexpr                          shift and go to state 11
    none                           shift and go to state 34
    expr                           shift and go to state 35
    top_top_compstmt               shift and go to state 51
    expr10                         shift and go to state 14
    expr1                          shift and go to state 41
    top_stmt                       shift and go to state 13

state 1

    (43) loop_stmt -> KEYWORD_redo .

    KEYWORD_while   reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_until   reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    DELIM           reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    newline         reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_elsif   reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_else    reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    KEYWORD_end     reduce using rule 43 (loop_stmt -> KEYWORD_redo .)
    $end            reduce using rule 43 (loop_stmt -> KEYWORD_redo .)


state 2

    (79) MLHS -> mlhs .

    EQUAL           reduce using rule 79 (MLHS -> mlhs .)
    COMMA           reduce using rule 79 (MLHS -> mlhs .)


state 3

    (148) uexpr -> MINUS .

    INT_CONSTANTS   reduce using rule 148 (uexpr -> MINUS .)
    FLOAT_CONSTANTS reduce using rule 148 (uexpr -> MINUS .)


state 4

    (23) top_stmt -> KEYWORD_while . expr3 opt_do gen_stmts opt_terms KEYWORD_end
    (105) expr3 -> . expr3 LOGICALOR expr4
    (106) expr3 -> . expr4
    (107) expr4 -> . expr4 LOGICALAND expr5
    (108) expr4 -> . expr5
    (109) expr5 -> . expr6 IFF expr6
    (110) expr5 -> . expr6 DOUBLEEQUAL expr6
    (111) expr5 -> . expr6 TRIPLEEQUAL expr6
    (112) expr5 -> . expr6 NOTEQUAL expr6
    (113) expr5 -> . expr6
    (114) expr6 -> . expr7 LESSEQUAL expr7
    (115) expr6 -> . expr7 LESS expr7
    (116) expr6 -> . expr7 GREATER expr7
    (117) expr6 -> . expr7 GREATEREQUAL expr7
    (118) expr6 -> . expr7
    (119) expr6 -> . BOOLEAN_CONSTANTS
    (120) expr7 -> . expr7 BITXOR expr8
    (121) expr7 -> . expr7 PIPE expr8
    (122) expr7 -> . expr8
    (123) expr8 -> . expr8 BITAND expr9
    (124) expr8 -> . expr9
    (125) expr9 -> . expr9 SHIFTL expr10
    (126) expr9 -> . expr9 SHIFTR expr10
    (127) expr9 -> . expr10
    (128) expr10 -> . expr10 PLUS expr11
    (129) expr10 -> . expr10 MINUS expr11
    (130) expr10 -> . expr11
    (131) expr11 -> . expr11 MULTIPLY expr12
    (132) expr11 -> . expr11 DIV expr12
    (133) expr11 -> . expr11 MOD expr12
    (134) expr11 -> . expr12
    (135) expr12 -> . expr13 DOUBLESTAR expr12
    (136) expr12 -> . expr13
    (137) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (138) expr13 -> . uexpr INT_CONSTANTS
    (139) expr13 -> . uexpr FLOAT_CONSTANTS
    (140) expr13 -> . CONSTANTS
    (141) expr13 -> . VARIABLES
    (142) expr13 -> . array
    (146) uexpr -> . none
    (147) uexpr -> . PLUS
    (148) uexpr -> . MINUS
    (149) uexpr -> . BITNOT
    (150) uexpr -> . BITCOMP
    (143) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (144) array -> . VARIABLES OPEN_BRACKET expr7 DOUBLEDOT expr7 CLOSE_BRACKET
    (145) array -> . VARIABLES OPEN_BRACKET expr7 TRIPLEDOT expr7 CLOSE_BRACKET
    (157) none -> .

    BOOLEAN_CONSTANTS shift and go to state 12
    OPEN_PAREN      shift and go to state 5
    CONSTANTS       shift and go to state 58
    VARIABLES       shift and go to state 53
    PLUS            shift and go to state 7
    MINUS           shift and go to state 3
    BITNOT          shift and go to state 38
    BITCOMP         shift and go to state 29
    INT_CONSTANTS   reduce using rule 157 (none -> .)
    FLOAT_CONSTANTS reduce using rule 157 (none -> .)

    uexpr                          shift and go to state 11
    none                           shift and go to state 56
    expr12                         shift and go to state 16
    expr13                         shift and go to state 17
    expr9                          shift and go to state 46
    expr3                          shift and go to state 54
    expr6                          shift and go to state 42
    expr7                          shift and go to state 55
    expr4                          shift and go to state 10
    expr5                          shift and go to state 44
    expr10                         shift and go to state 14
    expr8                          shift and go to state 45
    array                          shift and go to state 57
    expr11                         shift and go to state 15

state 5

    (137) expr13 -> OPEN_PAREN . expr1 CLOSE_PAREN
    (100) expr1 -> . expr3 QUESTION_MARK expr2 COLON expr2
    (101) expr1 -> . expr2
    (105) expr3 -> . expr3 LOGICALOR expr4
    (106) expr3 -> . expr4
    (102) expr2 -> . expr7 DOUBLEDOT expr7
    (103) expr2 -> . expr7 TRIPLEDOT expr7
    (104) expr2 -> . expr3
    (107) expr4 -> . expr4 LOGICALAND expr5
    (108) expr4 -> . expr5
    (120) expr7 -> . expr7 BITXOR expr8
    (121) expr7 -> . expr7 PIPE expr8
    (122) expr7 -> . expr8
    (109) expr5 -> . expr6 IFF expr6
    (110) expr5 -> . expr6 DOUBLEEQUAL expr6
    (111) expr5 -> . expr6 TRIPLEEQUAL expr6
    (112) expr5 -> . expr6 NOTEQUAL expr6
    (113) expr5 -> . expr6
    (123) expr8 -> . expr8 BITAND expr9
    (124) expr8 -> . expr9
    (114) expr6 -> . expr7 LESSEQUAL expr7
    (115) expr6 -> . expr7 LESS expr7
    (116) expr6 -> . expr7 GREATER expr7
    (117) expr6 -> . expr7 GREATEREQUAL expr7
    (118) expr6 -> . expr7
    (119) expr6 -> . BOOLEAN_CONSTANTS
    (125) expr9 -> . expr9 SHIFTL expr10
    (126) expr9 -> . expr9 SHIFTR expr10
    (127) expr9 -> . expr10
    (128) expr10 -> . expr10 PLUS expr11
    (129) expr10 -> . expr10 MINUS expr11
    (130) expr10 -> . expr11
    (131) expr11 -> . expr11 MULTIPLY expr12
    (132) expr11 -> . expr11 DIV expr12
    (133) expr11 -> . expr11 MOD expr12
    (134) expr11 -> . expr12
    (135) expr12 -> . expr13 DOUBLESTAR expr12
    (136) expr12 -> . expr13
    (137) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (138) expr13 -> . uexpr INT_CONSTANTS
    (139) expr13 -> . uexpr FLOAT_CONSTANTS
    (140) expr13 -> . CONSTANTS
    (141) expr13 -> . VARIABLES
    (142) expr13 -> . array
    (146) uexpr -> . none
    (147) uexpr -> . PLUS
    (148) uexpr -> . MINUS
    (149) uexpr -> . BITNOT
    (150) uexpr -> . BITCOMP
    (143) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (144) array -> . VARIABLES OPEN_BRACKET expr7 DOUBLEDOT expr7 CLOSE_BRACKET
    (145) array -> . VARIABLES OPEN_BRACKET expr7 TRIPLEDOT expr7 CLOSE_BRACKET
    (157) none -> .

    BOOLEAN_CONSTANTS shift and go to state 12
    OPEN_PAREN      shift and go to state 5
    CONSTANTS       shift and go to state 58
    VARIABLES       shift and go to state 53
    PLUS            shift and go to state 7
    MINUS           shift and go to state 3
    BITNOT          shift and go to state 38
    BITCOMP         shift and go to state 29
    INT_CONSTANTS   reduce using rule 157 (none -> .)
    FLOAT_CONSTANTS reduce using rule 157 (none -> .)

    uexpr                          shift and go to state 11
    none                           shift and go to state 56
    expr12                         shift and go to state 16
    expr13                         shift and go to state 17
    expr2                          shift and go to state 39
    expr3                          shift and go to state 40
    expr1                          shift and go to state 59
    expr6                          shift and go to state 42
    expr7                          shift and go to state 8
    expr4                          shift and go to state 10
    expr5                          shift and go to state 44
    expr10                         shift and go to state 14
    expr8                          shift and go to state 45
    expr9                          shift and go to state 46
    array                          shift and go to state 57
    expr11                         shift and go to state 15

state 6

    (0) S' -> program .



state 7

    (147) uexpr -> PLUS .

    INT_CONSTANTS   reduce using rule 147 (uexpr -> PLUS .)
    FLOAT_CONSTANTS reduce using rule 147 (uexpr -> PLUS .)


state 8

    (102) expr2 -> expr7 . DOUBLEDOT expr7
    (103) expr2 -> expr7 . TRIPLEDOT expr7
    (120) expr7 -> expr7 . BITXOR expr8
    (121) expr7 -> expr7 . PIPE expr8
    (114) expr6 -> expr7 . LESSEQUAL expr7
    (115) expr6 -> expr7 . LESS expr7
    (116) expr6 -> expr7 . GREATER expr7
    (117) expr6 -> expr7 . GREATEREQUAL expr7
    (118) expr6 -> expr7 .
